DERBY-5641: Remove unused BaseDataFileFactory methods plus minor cleanups Removed methods syncSideLog, pageToDirty and getTempDirectory. Additional cleanups:  o removed unused imports  o removed unnecessary return statement  o made synchronization object freezeSemaphore final  o removed unused instance variable backupPath  o removed unused local variable (and exception instantiation)    multipleJBMSWarning  o replaces new Boolean with Boolean.valueOf
Patch file: derby-5641-1a-unused_methods_plus_cleanup.diff


git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1298709 13f79535-47bb-0310-9956-ffa450edef68